Fixed #errorinfo not wrapping

--- a/css/jsanimator.css
+++ b/css/jsanimator.css
@@ -222,6 +222,7 @@
     font-family: monospace;
     line-height: 1.1;
     overflow-wrap: break-word;
+    text-wrap: wrap;
     text-align: left;
   }
 
